@@ -1,6 +1,11 @@
 09.12.2018
 ==========
 hcxpcaptool: detect EAPOL GROUP KEYs
+hcxpcaptool: move option -H to --hexdump-out
+hcxpcaptool: added new option --eapol-out
+--eapol-out=<file>                : output EAPOL packets in hex
+                                    format = mac_ap:mac_sta:eapol
+--hexdump-out=<file>              : output dump raw packets in hex
 
 
 05.12.2018
